--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </form>
 
   <script>
-    const arduinoIP = "http://192.168.1.44"; // ← Vervang dit met jouw Arduino IP (alleen lokaal)
+    const arduinoIP = "http://192.168.178.67";
 
     function verzendFormulier(event) {
       event.preventDefault();
